--- a/Motorcycle/Views/Producto/Index.cshtml
+++ b/Motorcycle/Views/Producto/Index.cshtml
@@ -1,76 +1,85 @@
 ﻿@model IEnumerable<Motorcycle.Models.Producto>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Listado de Productos";
 }
 
-<h1>Index</h1>
+<div class="container mt-4">
+    <!-- Contenedor unificado para título, formulario de búsqueda y tabla -->
+    <div class="unified-container border rounded shadow-sm">
+        <!-- Contenedor para título y botón -->
+        <div class="title-container border rounded p-3 mbb-3">
+            <div class="d-flex justify-content-between align-items-center">
+                <h1 class="mb-0">Listado de Productos</h1>
+                <a asp-action="Create" class="btn btn-primary btn-sm">
+                    <i class="fa fa-plus"></i> Nuevo Registro
+                </a>
+            </div>
+        </div>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.CodigoProducto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.NombreProducto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DescripcionProducto)
-            </th>
-            <th width="200px">
-                @Html.DisplayNameFor(model => model.FotoProducto)
+        <!-- Contenedor para el formulario de búsqueda -->
+        <div class="search-container borderr rounded p-3 mbb-3">
+            @using (Html.BeginForm("Index", "Producto", FormMethod.Get, new { @class = "form-inline mb-0" }))
+            {
+                <div class="form-group mb-0 d-flex align-items-center">
+                    @Html.TextBox("searchTerm", null, new { @class = "form-control form-control-sm", @placeholder = "Buscar", @style = "width: 300px;" })
+                    <button type="submit" class="btn btn-light btn-sm ml-2 d-flex align-items-center">
+                        <i class="fa fa-search" style="color: gray;"></i>
+                    </button>
+                </div>
+            }
+        </div>
 
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ValorUnitarioProducto)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdUsuarioNavigation.NombreUsuario)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CodigoProducto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.NombreProducto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.DescripcionProducto)
-                </td>
-                <td width="208px">
-                    @if (item.FotoProducto != null && item.FotoProducto.Length > 0)
+        <!-- Contenedor para la tabla -->
+        <div class="table-responsive borderr rounded p-3">
+            <table class="table table-striped table-sm mb-0">
+                <thead class="thead-light">
+                    <tr>
+                        <th>@Html.DisplayNameFor(model => model.CodigoProducto)</th>
+                        <th>@Html.DisplayNameFor(model => model.NombreProducto)</th>
+                        <th>@Html.DisplayNameFor(model => model.DescripcionProducto)</th>
+                        <th>@Html.DisplayNameFor(model => model.FotoProducto)</th>
+                        <th>@Html.DisplayNameFor(model => model.ValorUnitarioProducto)</th>
+                        <th>@Html.DisplayNameFor(model => model.IdUsuarioNavigation.NombreUsuario)</th>
+                        <th>Acciones</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
                     {
-                        var imageBase64 = Convert.ToBase64String(item.FotoProducto);
-                        var imageUrl = $"data:image;base64,{imageBase64}";
-                        <img src="@imageUrl" alt="Product Image" style="max-width: 200px; max-height: 200px;" />
+                        <tr>
+                            <td>@Html.DisplayFor(modelItem => item.CodigoProducto)</td>
+                            <td>@Html.DisplayFor(modelItem => item.NombreProducto)</td>
+                            <td>@Html.DisplayFor(modelItem => item.DescripcionProducto)</td>
+                            <td width="208px">
+                                @if (item.FotoProducto != null && item.FotoProducto.Length > 0)
+                                {
+                                    var imageBase64 = Convert.ToBase64String(item.FotoProducto);
+                                    var imageUrl = $"data:image;base64,{imageBase64}";
+                                    <img src="@imageUrl" alt="Product Image" style="max-width: 200px; max-height: 200px;" />
+                                }
+                                else
+                                {
+                                    <text>No Image</text>
+                                }
+                            </td>
+                            <td>@Html.DisplayFor(modelItem => item.ValorUnitarioProducto)</td>
+                            <td>@Html.DisplayFor(modelItem => item.IdUsuarioNavigation.NombreUsuario)</td>
+                            <td>
+                                <a asp-action="Edit" class="btn btn-warning btn-sm mr-2" asp-route-id="@item.IdProducto">
+                                    <i class="fa fa-pencil-alt"></i>
+                                </a>
+                                <a asp-action="Details" class="btn btn-primary btn-sm mr-2" asp-route-id="@item.IdProducto">
+                                    <i class="fa fa-eye"></i>
+                                </a>
+                                <a asp-action="Delete" class="btn btn-danger btn-sm" asp-route-id="@item.IdProducto">
+                                    <i class="fa fa-trash-alt"></i>
+                                </a>
+                            </td>
+                        </tr>
                     }
-                    else
-                    {
-                        <text>No Image</text>
-                    }
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ValorUnitarioProducto)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.IdUsuarioNavigation.NombreUsuario)
-                </td>
-                <td>
-                    <a asp-action="Edit" class="btn btn-warning" asp-route-id="@item.IdProducto">Edit</a> |
-                    <a asp-action="Details" class="btn btn-primary" asp-route-id="@item.IdProducto">Details</a> |
-                    <a asp-action="Delete" class="btn btn-danger" asp-route-id="@item.IdProducto">Delete</a>
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
