--- a/Motorcycle/Views/Shared/_Layout.cshtml
+++ b/Motorcycle/Views/Shared/_Layout.cshtml
@@ -7,13 +7,12 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Motorcycle.styles.css" asp-append-version="true" />
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback">
-
-
      <!-- Font Awesome -->
-<link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-<!-- Theme style -->
-<link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+   <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
+    <!-- Theme style -->
+   <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
 
 </head>
 <body class="hold-transition sidebar-mini">
@@ -164,7 +163,7 @@
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
     <!-- Brand Logo -->
     <a href="index3.html" class="brand-link">
-      <img src="dist/img/logo3.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+      <img src="dist/img/logo3.png" alt="logogo3" class="brand-image img-circle elevation-3" style="opacity: .8">
       <span class="brand-text font-weight-light">Motorcycle</span>
     </a>
 
@@ -335,11 +334,11 @@
 
             
           </div>
-                        <div class="container">
-                            <main role="main" class="pb-3">
-                                @RenderBody()
-                            </main>
-                        </div>
+             <div class="container">
+                <main role="main" class="pb-3">
+                   @RenderBody()
+                </main>
+             </div>
           <!-- /.col-md-6 -->
          
           <!-- /.col-md-6 -->
