carga de pagina clientes

--- a/Motorcycle/Views/Correoclientes/Delete.cshtml
+++ b/Motorcycle/Views/Correoclientes/Delete.cshtml
@@ -10,7 +10,7 @@
         <div class="card-body">
             <dl class="row mb-0">
                 <dt class="col-sm-4">Correo</dt>
-                <dd class="col-sm-8">@Html.DisplayFor(model => model.CorreoCliente)</dd>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CorreoCliente1)</dd>
                 <dt class="col-sm-4">Cliente</dt>
                 <dd class="col-sm-8">@Html.DisplayFor(model => model.IdClienteNavigation.NombreCliente)</dd>
             </dl>
