--- a/Motorcycle/Views/Correousuarios/Delete.cshtml
+++ b/Motorcycle/Views/Correousuarios/Delete.cshtml
@@ -10,7 +10,7 @@
         <div class="card-body">
             <dl class="row mb-0">
                 <dt class="col-sm-4">Correo</dt>
-                <dd class="col-sm-8">@Html.DisplayFor(model => model.CorreoUsuario)</dd>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.CorreoUsuario1)</dd>
                 <dt class="col-sm-4">Usuario</dt>
                 <dd class="col-sm-8">@Html.DisplayFor(model => model.IdUsuarioNavigation.NombreUsuario)</dd>
             </dl>
