--- a/Motorcycle/Views/Shared/_Layout.cshtml
+++ b/Motorcycle/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/Motorcycle.styles.css" asp-append-version="true" />
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback" rel="stylesheet">
     <link rel="stylesheet" href="~/plugins/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="~/dist/css/adminlte.min.css">
+    <link rel="stylesheet" href="~/dist/css/adminlte.min.css" />
 </head>
 <body class="hold-transition sidebar-mini">
 
@@ -229,6 +229,12 @@
                             <a href="@Url.Action("Index", "Correousuarios")" class="nav-link">
                                 <i class="nav-icon fas fa-envelope"></i>
                                 <p>Correousuario</p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="@Url.Action("Index", "Redactarcorreo")" class="nav-link">
+                                <i class="nav-icon fas fa-envelope"></i>
+                                <p>Redactar correo</p>
                             </a>
                         </li>
                         <li class="nav-item">
