--- a/Motorcycle/Views/Usuarios/Delete.cshtml
+++ b/Motorcycle/Views/Usuarios/Delete.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Motorcycle.Models.Usuario
 
 @{
-    Layout = null; // No usar el layout principal para el contenido del modal
+    Layout = null; 
 }
 
 <div class="modal-body">
