--- a/Motorcycle/Views/Correoclientes/Create.cshtml
+++ b/Motorcycle/Views/Correoclientes/Create.cshtml
@@ -8,18 +8,18 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="CorreoCliente" class="control-label"></label>
-                <input asp-for="CorreoCliente" class="form-control" />
-                <span asp-validation-for="CorreoCliente" class="text-danger"></span>
+            <label asp-for="CorreoCliente1" class="control-label"></label>
+                <input asp-for="CorreoCliente1" class="form-control" />
+                <span asp-validation-for="CorreoCliente1" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdCliente" class="control-label"></label>
                 <select asp-for="IdCliente" class ="form-control" asp-items="ViewBag.IdCliente">Nombre Cliente</select>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Crear" class="btn btn-custom-warning btn-sm mr-2" />
-                <button type="button" class="btn btn-primarys btn-sm mr-2" data-bs-dismiss="modal">Cancelar</button>
-            </div>
+        <div class="form-group">
+            <input type="submit" value="Crear" class="btn btn-custom-warning btn-sm mr-2" />
+            <button type="button" class="btn btn-primarys btn-sm mr-2" data-bs-dismiss="modal">Cancelar</button>
+        </div>
         </form>
 </div>
 
