--- a/Motorcycle/Views/Correoclientes/Details.cshtml
+++ b/Motorcycle/Views/Correoclientes/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorreoCliente)
+            @Html.DisplayNameFor(model => model.CorreoCliente1)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorreoCliente)
+            @Html.DisplayFor(model => model.CorreoCliente1)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdClienteNavigation.NombreCliente)
