--- a/Motorcycle/Views/Correoclientes/Edit.cshtml
+++ b/Motorcycle/Views/Correoclientes/Edit.cshtml
@@ -8,9 +8,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdCorreoCliente" />
             <div class="form-group">
-                <label asp-for="CorreoCliente" class="control-label"></label>
-                <input asp-for="CorreoCliente" class="form-control" />
-                <span asp-validation-for="CorreoCliente" class="text-danger"></span>
+                <label asp-for="CorreoCliente1" class="control-label"></label>
+                <input asp-for="CorreoCliente1" class="form-control" />
+                <span asp-validation-for="CorreoCliente1" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdCliente" class="control-label">Nombre Cliente</label>
