--- a/Motorcycle/Views/Correousuarios/Details.cshtml
+++ b/Motorcycle/Views/Correousuarios/Details.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CorreoUsuario)
+           Correo Usuario
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CorreoUsuario)
+            @Html.DisplayFor(model => model.CorreoUsuario1)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.IdUsuarioNavigation.NombreUsuario)
