--- a/Motorcycle/Views/Correousuarios/Edit.cshtml
+++ b/Motorcycle/Views/Correousuarios/Edit.cshtml
@@ -9,9 +9,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="IdCorreoUsuario" />
             <div class="form-group">
-                <label asp-for="CorreoUsuario" class="control-label"></label>
-                <input asp-for="CorreoUsuario" class="form-control" />
-                <span asp-validation-for="CorreoUsuario" class="text-danger"></span>
+                <label asp-for="CorreoUsuario1" class="control-label"></label>
+                <input asp-for="CorreoUsuario1" class="form-control" />
+                <span asp-validation-for="CorreoUsuario1" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="IdUsuario" class="control-label">Nombre Usuario</label>
